--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
     <p>Se questo sogno vi tocca, vi chiedo: <strong>parlatene. Diffondetelo. Spingetelo dove potete.</strong> L’Italia può essere il faro verde d’Europa. Ma servono coraggio e volontà.</p>
 
     <a href="Roadmap_Italia_100_Rinnovabile.pdf" class="button" download>Scarica il Manifesto in PDF</a>
+    <a href="perche-possibile.html" class="button">Perché è possibile</a>
 
     <img src="manifesto_italia_2040.png" alt="Manifesto Italia 100% Rinnovabile">
   </div>
